# spotify-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.py
evaluations/: README.md  spotify_eval.xml
spotify_mcp/: __init__.py  types.py  utils.py
spotify_mcp/similarity/: __init__.py  engine.py  strategies.py
tests/: __init__.py  conftest.py  test_engine.py  test_strategies.py  test_types.py  test_utils.py
